unpackaged/main/default/objects/NAICS__c/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Vertical Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical_Markets</valueSetName>
    </valueSet>
</CustomField>