unpackaged/main/default/objects/NAICS__c/fields/X2_Digit_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>X2_Digit_NAICS_Code__c</fullName>
    <label>2 Digit NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>