unpackaged/main/default/objects/NAICS__c/fields/X2_Digit_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>X2_Digit_NAICS_Description__c</fullName>
    <label>2 Digit NAICS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>