unpackaged/main/default/objects/NAICS__c/fields/X3_Digit_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>X3_Digit_NAICS_Description__c</fullName>
    <label>3 Digit NAICS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>