unpackaged/main/default/objects/NAICS__c/fields/X4_Digit_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>X4_Digit_NAICS_Code__c</fullName>
    <label>4 Digit NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>